<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/img_input"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/name_input">

        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/prompt_male" />

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prompt_female" />

        <RadioButton
            android:id="@+id/radioButton_none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prompt_none" />

    </RadioGroup>

    <EditText
        android:id="@+id/address_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address_hint"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_list"
        app:layout_constraintStart_toStartOf="@+id/img_input"
        app:layout_constraintTop_toBottomOf="@+id/img_input" />

    <Button
        android:id="@+id/btn_query"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:text="@string/btn_query"
        app:layout_constraintStart_toEndOf="@+id/btn_insert"
        app:layout_constraintTop_toTopOf="@+id/btn_insert" />

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:text="@string/btn_insert"
        app:layout_constraintStart_toEndOf="@+id/btn_list"
        app:layout_constraintTop_toTopOf="@+id/btn_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rview"
        android:layout_width="373dp"
        android:layout_height="439dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_insert" />

    <ImageView
        android:id="@+id/img_input"
        android:clickable="true"
        android:layout_width="144dp"
        android:layout_height="149dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/linux" />

</androidx.constraintlayout.widget.ConstraintLayout>