<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/prompt_name"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address_modify"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_address"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_sex"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/address_modify"
        app:layout_constraintTop_toBottomOf="@+id/address_modify" />

    <EditText
        android:id="@+id/name_minput"
        android:layout_width="243dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <EditText
        android:id="@+id/address_minput"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/address_modify"
        app:layout_constraintTop_toTopOf="@+id/address_modify" />

    <RadioGroup
        android:id="@+id/sex_minput"
        android:layout_width="238dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6">

        <RadioButton
            android:id="@+id/rbtn_male"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prompt_male" />

        <RadioButton
            android:id="@+id/rbtn_female"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prompt_female" />

        <RadioButton
            android:id="@+id/rbtn_none"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prompt_none" />
    </RadioGroup>

    <Button
        android:id="@+id/modify_btn"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/img_show" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/modify_btn"
        app:layout_constraintTop_toBottomOf="@+id/modify_btn" />

    <ImageView
        android:id="@+id/img_show"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:clickable="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/sex_minput"
        app:srcCompat="@drawable/linux" />

</androidx.constraintlayout.widget.ConstraintLayout>